@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	8.40 (gritter) 3/6/07";
+	"@(#)/usr/ucb/otfdump.sl	8.41 (gritter) 3/9/07";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  8.40 (gritter) 3/6/07";
-const char creator[] = "Heirloom Documentation Tools - dpost 8.40 (gritter) 3/6/07";
+static const char sccsid[] USED = "@(#)dpost.sl  8.41 (gritter) 3/9/07";
+const char creator[] = "Heirloom Documentation Tools - dpost 8.41 (gritter) 3/9/07";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.40 (gritter) 3/6/07";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.41 (gritter) 3/9/07";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.40 (gritter) 3/6/07";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.41 (gritter) 3/9/07";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "8.40";
+const char revision[] = "8.41";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.110 (gritter) 3/5/07
@@ -24,15 +24,15 @@ hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.141 (gritter) 2/23/07
 n2.c: * Sccsid @(#)n2.c	1.46 (gritter) 3/5/07
 n3.c: * Sccsid @(#)n3.c	1.180 (gritter) 12/17/06
-n4.c: * Sccsid @(#)n4.c	1.99 (gritter) 12/25/06
-n5.c: * Sccsid @(#)n5.c	1.126 (gritter) 2/23/07
-n7.c: * Sccsid @(#)n7.c	1.172 (gritter) 3/6/07
+n4.c: * Sccsid @(#)n4.c	1.100 (gritter) 3/9/07
+n5.c: * Sccsid @(#)n5.c	1.127 (gritter) 3/9/07
+n7.c: * Sccsid @(#)n7.c	1.173 (gritter) 3/9/07
 n8.c: * Sccsid @(#)n8.c	1.40 (gritter) 11/25/06
 n9.c: * Sccsid @(#)n9.c	1.75 (gritter) 3/4/07
 ni.c: * Sccsid @(#)ni.c	1.47 (gritter) 12/17/06
 nii.c: * Sccsid @(#)nii.c	1.48 (gritter) 3/5/07
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.160 (gritter) 2/23/07
+tdef.h: * Sccsid @(#)tdef.h	1.161 (gritter) 3/9/07
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.33 (gritter) 12/25/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.49 (gritter) 11/13/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.42 (gritter) 12/25/06
